--- a/order.html
+++ b/order.html
@@ -777,11 +777,55 @@
                             185 ₽  - (Бесплатно при заказе от 2000 ₽,  в остальных случаях – по тарифам Яндекс.Такси со 100% гарантией целостности товара.)
                         </div>
                         <div class="time-delivery">
-                            <p>Срок доставки:</p><p class="time">90 минут</p>
+                            <p>Срок доставки:</p><p class="time-exprees">90 минут</p>
                         </div>
                         <div class="way-blc-bot">
                             Доставка будет осуществлена через сервис Яндекс.Такси в течении 90 минут после оформления и оплаты заказа.
                             аш номер телефона будет привязан к заказу и Вы сможете отслеживать статус доставки в одноименном приложении
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-ways-to-deliver">
+                <div class="title-stl ordered-title-stl">
+                    Способы доставки по Томской области:
+                </div>
+                <div class="ways-to-wrapper">
+                    <!-- <div class="ways-to-deliver-blc">
+                        
+                    </div> -->
+                    <div class="ordder-way-blc">
+                        <div class="way-blc-top">
+                            <img src="./img/cdek 3.png" alt="">
+                            <p class="name-ways-order">
+                                Пункт выдачи
+                            </p>
+                        </div>
+                        <div class="way-blc-mid">
+                            185 ₽ - (Бесплатно при заказе от 2990 ₽)
+                        </div>
+                        <div class="time-delivery">
+                            <p>Срок доставки:</p><p class="time">1-4 рабочих дня</p>
+                        </div>
+                        <div class="way-blc-bot">
+                            Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
+                        </div>
+                    </div>
+                    <div class="ordder-way-blc">
+                        <div class="way-blc-top">
+                            <img src="./img/cdek 3.png" alt="">
+                            <p class="name-ways-order">
+                                Пункт выдачи
+                            </p>
+                        </div>
+                        <div class="way-blc-mid">
+                            185 ₽ - (Бесплатно при заказе от 2990 ₽)
+                        </div>
+                        <div class="time-delivery">
+                            <p>Срок доставки:</p><p class="time">1-4 рабочих дня</p> 
+                        </div>
+                        <div class="way-blc-bot">
+                            Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
                         </div>
                     </div>
                 </div>
