--- a/garanties.html
+++ b/garanties.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="mob-bottom-menu">
+    <!-- <div class="mob-bottom-menu">
         <div class="mob-bottom-menu-item">
             <div class="header-menu-catalog">
                 <div class="header-menu-catalog-button">
@@ -734,7 +734,7 @@
             </div>
         </div>
         <div class="header-shadow"></div>
-    </header>
+    </header> -->
 
     <main>
         <div  class="container">
@@ -747,7 +747,7 @@
                         Гарантия подлинности продукции
                     </div>
                     <div class="top-desc-txt">
-                        <ul class="top-desc-txt">
+                        <ul class="top-desc-txt-ul">
                             <li class="top-desc-txt-blc">Мы являемся прямыми партнерами производителей продукции в Южной Корее и официальных дистрибьютеров корейской косметики на территории РФ. Вся продукция, представленная на ohbeautybar.ru, проходит необходимую сертификацию в соотвествии с законодательством и реализуется легально на территории РФ.</li>
                             <li class="top-desc-txt-blc">Поэтому вся косметика на сайте имеет серификаты, подтверждающие подлинность. Мы готовы предоставить сертификат на каждый продукт по запросу.</li>
                             <li class="top-desc-txt-blc"> Кроме того, вся косметика, представленная сайте русифицирована. Это значит, что на упаковках вы найдёте наклейку или вкладыш с описанием продукта на русском языке.</li>
@@ -764,13 +764,13 @@
                     Заполните форму ниже и мы вышлем их Вам в ближайшее время.
                 </div>
                 <div class="gar-section-form">
-                    <form action="">
+                    <form class="form-garanties" action="">
                         <div class="form-input-wrapp">
                             <input type="name" placeholder="Введите ваше имя">
                             <input type="email" placeholder="Введите ваш e-mail">
                         </div>
                         <div class="checkbox-wrapp">
-                            <input class="checkbox-gar" type="checkbox" id="checkbox">  <p>Нажимая на кнопку, Вы соглашаетесь <p class="checkbox-underline"> с правилами обработки персональных данных</p></p> 
+                            <input class="checkbox-gar" type="checkbox" id="checkbox"> <span> Нажимая на кнопку, Вы соглашаетесь <p class="checkbox-underline"> с правилами обработки персональных данных</p></span>    
                         </div>
                     </form>
                 </div>
