--- a/partners.html
+++ b/partners.html
@@ -738,145 +738,51 @@
 
     <main>
         <div  class="container">
-            <div class="section-top-order">
-                <div class="section-top-img">
-                    <img src="./img/Rectangle 135.png" alt="">
+            <div class="section-top-img">
+                <img src="./img/Rectangle 140.png" alt="">
+            </div>
+            <div class="gar-section-cond">
+                <div class="title-stl">
+                    Партнерам
                 </div>
-                <div class="section-ord-ways">
-                    <div class="title-stl">
-                        Доступные способы доставки:
-                    </div>
-                    <p class="choise-way">
-                        Введите свой город и выберите его из списка,<br>
-                        чтобы узнать точные условия доставки и оплаты
+                <div class="gar-section-cond-wrapp">
+                    <p class="gar-section-cond-txt">
+                        Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. 
                     </p>
-                    <div class="country-select-wrapp">
-                        <select class="select-country" name="select">
-                            <option value="value1" selected>Минск</option>
-                            <option value="value2" >Чечня</option>
-                            <option value="value3">Гомель</option>
-                          </select>
-                          <button class="find-country">Найти</button>
-                    </div>
-            
+                    <p class="gar-section-cond-txt">
+                        Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. 
+                    </p>
+                    <p class="gar-section-cond-txt">
+                        Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. Здесь будет текст для Ваших партнеров, который подробно расскажет о условиях сотрудничества с Вами. 
+                    </p>
                 </div>
+                
             </div>
-            <div class="section-ways-how-order">
-                <div class="title-stl ordered-title-stl">
-                    Способы доставки в городе Томск:
+            <div class="section-back-connection">
+                <div class="section-form-title">
+                    Мы открыты к диалогу  <br> и сотрудничеству!
                 </div>
-                <div class="orders-ways-wrapper">
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/complite3.png" alt="">
-                            <p class="name-ways-order">
-                                Экспресс доставка 
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                            <span class="txt-stl-time-del-f">185 ₽ - </span>(Бесплатно при заказе от 2000 ₽,  в остальных случаях – по тарифам Яндекс.Такси со 100% гарантией целостности товара.)
-                        </div>
-                        <div class="time-delivery">
-                           <span class="txt-stl-time-del-f"> Срок доставки:</span><p class="time-exprees">90 минут</p>
-                        </div>
-                        <div class="way-blc-bot">
-                            Доставка будет осуществлена через сервис Яндекс.Такси в течении 90 минут после оформления и оплаты заказа.
-                            аш номер телефона будет привязан к заказу и Вы сможете отслеживать статус доставки в одноименном приложении
-                        </div>
-                    </div>
+                <div class="section-form-title-under">
+                    Пожалуйста, заполните форму ниже
                 </div>
-            </div>
-            <div class="section-ways-to-deliver">
-                <div class="title-stl ordered-title-stl">
-                    Способы доставки по Томской области:
+                <div class="gar-section-form">
+                    <form class="" action="">
+                        <div class="form-input-wrapp">
+                            <input type="name" placeholder="ФИО ответственного лица">
+                            <input type="text" placeholder="Наименование организации">
+                            <input type="number" placeholder="Номер телефона">
+                            <input type="email" placeholder="Email">
+                            <input type="url" placeholder="Ссылка на сайт или соц сеть">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Краткое описание предложения"></textarea>
+                        </div>
+                        <div class="checkbox-wrapp">
+                            <input class="checkbox-gar" type="checkbox" id="checkbox">  <span>Нажимая на кнопку, Вы соглашаетесь <p class="checkbox-underline"> с правилами обработки персональных данных</p></span> 
+                        </div>
+                    </form>
                 </div>
-                <div class="ways-to-wrapper">
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/cdek 3.png" alt="">
-                            <p class="name-ways-order place-deliver">
-                                Пункт выдачи
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 2990 ₽)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
-                        </div>
-                    </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/cdek 3.png" alt="">
-                            <p class="name-ways-order courier">
-                                Курьер
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 3990 ₽, если адрес в пределах МКАД)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
-                        </div>
-                    </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/new-cart-i-boxberry 3.png" alt="">
-                            <p class="name-ways-order place-deliver">
-                                Пункт выдачи
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 2990 ₽)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте
-                        </div>
-                    </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/new-cart-i-boxberry 3.png" alt="">
-                            <p class="name-ways-order courier">
-                                Курьер
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">335 ₽ </span> 
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте
-                        </div>
-                    </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/new-cart-i-pochta 3.png" alt="">
-                            <p class="name-ways-order place-deliver">
-                                Пункт выдачи
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">350 ₽ - </span> (Бесплатно при заказе от 3990 ₽)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте 
-                        </div>
-                    </div>
-                </div>
+                <button class="gar-section-form-btn">
+                    Отправить
+                </button>
             </div>
         </div>
     </main>
