--- a/order-delivery.html
+++ b/order-delivery.html
@@ -761,120 +761,34 @@
             
                 </div>
             </div>
-            <div class="section-ways-how-order">
-                <div class="title-stl ordered-title-stl">
-                    Способы доставки в городе Томск:
-                </div>
-                <div class="orders-ways-wrapper">
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/complite3.png" alt="">
-                            <p class="name-ways-order">
-                                Экспресс доставка 
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                            <span class="txt-stl-time-del-f">185 ₽ - </span>(Бесплатно при заказе от 2000 ₽,  в остальных случаях – по тарифам Яндекс.Такси со 100% гарантией целостности товара.)
-                        </div>
-                        <div class="time-delivery">
-                           <span class="txt-stl-time-del-f"> Срок доставки:</span><p class="time-exprees">90 минут</p>
-                        </div>
-                        <div class="way-blc-bot">
-                            Доставка будет осуществлена через сервис Яндекс.Такси в течении 90 минут после оформления и оплаты заказа.
-                            аш номер телефона будет привязан к заказу и Вы сможете отслеживать статус доставки в одноименном приложении
-                        </div>
+            <div class="section-del-pay">
+                <div class="deliver-blc">
+                    <div class="title-stl">
+                        Доставка:
+                    </div>
+                    <div class="del-pay-img-row">
+                        <img src="./img/cdek 3.png" alt="">
+                        <img src="./img/new-cart-i-boxberry 3.png" alt="">
+                        <img src="./img/new-cart-i-pochta 3.png" alt="">
+                    </div>
+                    <div class="del-pay-txt">
+                        Интернет магазин "5 минут и выхожу" доставляет по всей Росси и странам СНГ. Мы сотрудничаем с крупнейшими и надежными транспортными компаниями, доставляем Ваши заказы курьерами и в пункты самовывоза.
+
                     </div>
                 </div>
-            </div>
-            <div class="section-ways-to-deliver">
-                <div class="title-stl ordered-title-stl">
-                    Способы доставки по Томской области:
-                </div>
-                <div class="ways-to-wrapper">
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/cdek 3.png" alt="">
-                            <p class="name-ways-order place-deliver">
-                                Пункт выдачи
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 2990 ₽)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
-                        </div>
+                <div class="pay-blc">
+                    <div class="title-stl">
+                        Оплата:
                     </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/cdek 3.png" alt="">
-                            <p class="name-ways-order courier">
-                                Курьер
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 3990 ₽, если адрес в пределах МКАД)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
-                        </div>
+                    <div class="del-pay-img-row">
+                        <img src="./img/cdek 3.png" alt="">
+                        <img src="./img/new-cart-i-boxberry 3.png" alt="">
+                        <img src="./img/new-cart-i-pochta 3.png" alt="">
                     </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/new-cart-i-boxberry 3.png" alt="">
-                            <p class="name-ways-order place-deliver">
-                                Пункт выдачи
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 2990 ₽)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте
-                        </div>
-                    </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/new-cart-i-boxberry 3.png" alt="">
-                            <p class="name-ways-order courier">
-                                Курьер
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">335 ₽ </span> 
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте
-                        </div>
-                    </div>
-                    <div class="ordder-way-blc">
-                        <div class="way-blc-top">
-                            <img src="./img/new-cart-i-pochta 3.png" alt="">
-                            <p class="name-ways-order place-deliver">
-                                Пункт выдачи
-                            </p>
-                        </div>
-                        <div class="way-blc-mid">
-                           <span class="txt-stl-time-del-f">350 ₽ - </span> (Бесплатно при заказе от 3990 ₽)
-                        </div>
-                        <div class="time-delivery">
-                            <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
-                        </div>
-                        <div class="way-blc-bot">
-                            Оплата онлайн на сайте 
-                        </div>
+                    <div class="del-pay-txt">
+                        Оплатить можно как на сайте при оформлени заказа, так и при получении заказа, наличными или картой. Заказ можно оплатить картой любого банка.
+
+
                     </div>
                 </div>
             </div>
