--- a/product.html
+++ b/product.html
@@ -1201,6 +1201,128 @@
                         </div>
                     </div>
                 </div>
+                <div class="product-mob-tabs">
+                    <div class="product-mob-tab">
+                        <div class="product-mob-tab-title">
+                            <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12.4668" cy="12.7427" r="12.4668" fill="#353430" fill-opacity="0.62"/>
+                                <path d="M11.8141 18.2734V13.7394H7.35608C7.2041 13.7394 7.06901 13.6803 6.9508 13.5621C6.84949 13.4439 6.79883 13.3004 6.79883 13.1315C6.79883 12.9795 6.84949 12.8529 6.9508 12.7515C7.06901 12.6333 7.2041 12.5742 7.35608 12.5742H11.8141V8.09094C11.8141 7.93896 11.8647 7.81231 11.966 7.711C12.0842 7.59279 12.2193 7.53369 12.3713 7.53369H12.4979C12.6499 7.53369 12.7766 7.59279 12.8779 7.711C12.9961 7.81231 13.0552 7.93896 13.0552 8.09094V12.5742H17.5385C17.6905 12.5742 17.8171 12.6333 17.9184 12.7515C18.0366 12.8698 18.0957 13.0133 18.0957 13.1821C18.0957 13.3341 18.0366 13.4692 17.9184 13.5874C17.8171 13.6887 17.6905 13.7394 17.5385 13.7394H13.0552V18.2734C13.0552 18.4253 12.9961 18.5604 12.8779 18.6786C12.7766 18.7799 12.6499 18.8306 12.4979 18.8306H12.3713C12.2193 18.8306 12.0842 18.7799 11.966 18.6786C11.8647 18.5604 11.8141 18.4253 11.8141 18.2734Z" fill="white"/>
+                            </svg>   
+                            <span>
+                                Описание
+                            </span>                             
+                        </div>
+                        <div class="product-mob-tab-content" style="display:none">
+                            Мы предлагаем широкий спектр эффективных средств по уходу за кожей лица, телом, волосами, а также качественную декоративную косметику, созданную в Южной Корее.
+                            <br><br>
+                            Благодаря большому выбору средств, натуральным составам, оригинальным продуктам, неповторимому дизайну и доступным ценам корейская косметика быстро завоевала популярность во всем мире.
+                            <br><br>
+                            Корейская косметика широко известна в beauty (бьюти) сфере, активно используется в профессиональной косметологии и даже считается элитной.
+                            <br><br>
+                            Огромный выбор линеек продуктов позволяет комплексно решать конкретные задачи: увлажнение, осветление, антивозрастной уход, заживление воспалений и пр. Все продукты гипоаллергенны и имеют сертификаты безопасности!
+                        </div>
+                    </div>
+                    <div class="product-mob-tab">
+                        <div class="product-mob-tab-title">
+                            <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12.4668" cy="12.7427" r="12.4668" fill="#353430" fill-opacity="0.62"/>
+                                <path d="M11.8141 18.2734V13.7394H7.35608C7.2041 13.7394 7.06901 13.6803 6.9508 13.5621C6.84949 13.4439 6.79883 13.3004 6.79883 13.1315C6.79883 12.9795 6.84949 12.8529 6.9508 12.7515C7.06901 12.6333 7.2041 12.5742 7.35608 12.5742H11.8141V8.09094C11.8141 7.93896 11.8647 7.81231 11.966 7.711C12.0842 7.59279 12.2193 7.53369 12.3713 7.53369H12.4979C12.6499 7.53369 12.7766 7.59279 12.8779 7.711C12.9961 7.81231 13.0552 7.93896 13.0552 8.09094V12.5742H17.5385C17.6905 12.5742 17.8171 12.6333 17.9184 12.7515C18.0366 12.8698 18.0957 13.0133 18.0957 13.1821C18.0957 13.3341 18.0366 13.4692 17.9184 13.5874C17.8171 13.6887 17.6905 13.7394 17.5385 13.7394H13.0552V18.2734C13.0552 18.4253 12.9961 18.5604 12.8779 18.6786C12.7766 18.7799 12.6499 18.8306 12.4979 18.8306H12.3713C12.2193 18.8306 12.0842 18.7799 11.966 18.6786C11.8647 18.5604 11.8141 18.4253 11.8141 18.2734Z" fill="white"/>
+                            </svg>   
+                            <span>
+                                что делает
+                            </span>                             
+                        </div>
+                        <div class="product-mob-tab-content" style="display:none">
+                            Мы предлагаем широкий спектр эффективных средств по уходу за кожей лица, телом, волосами, а также качественную декоративную косметику, созданную в Южной Корее.
+                            <br><br>
+                            Благодаря большому выбору средств, натуральным составам, оригинальным продуктам, неповторимому дизайну и доступным ценам корейская косметика быстро завоевала популярность во всем мире.
+                            <br><br>
+                            Корейская косметика широко известна в beauty (бьюти) сфере, активно используется в профессиональной косметологии и даже считается элитной.
+                            <br><br>
+                            Огромный выбор линеек продуктов позволяет комплексно решать конкретные задачи: увлажнение, осветление, антивозрастной уход, заживление воспалений и пр. Все продукты гипоаллергенны и имеют сертификаты безопасности!
+                        </div>
+                    </div>
+                    <div class="product-mob-tab">
+                        <div class="product-mob-tab-title">
+                            <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12.4668" cy="12.7427" r="12.4668" fill="#353430" fill-opacity="0.62"/>
+                                <path d="M11.8141 18.2734V13.7394H7.35608C7.2041 13.7394 7.06901 13.6803 6.9508 13.5621C6.84949 13.4439 6.79883 13.3004 6.79883 13.1315C6.79883 12.9795 6.84949 12.8529 6.9508 12.7515C7.06901 12.6333 7.2041 12.5742 7.35608 12.5742H11.8141V8.09094C11.8141 7.93896 11.8647 7.81231 11.966 7.711C12.0842 7.59279 12.2193 7.53369 12.3713 7.53369H12.4979C12.6499 7.53369 12.7766 7.59279 12.8779 7.711C12.9961 7.81231 13.0552 7.93896 13.0552 8.09094V12.5742H17.5385C17.6905 12.5742 17.8171 12.6333 17.9184 12.7515C18.0366 12.8698 18.0957 13.0133 18.0957 13.1821C18.0957 13.3341 18.0366 13.4692 17.9184 13.5874C17.8171 13.6887 17.6905 13.7394 17.5385 13.7394H13.0552V18.2734C13.0552 18.4253 12.9961 18.5604 12.8779 18.6786C12.7766 18.7799 12.6499 18.8306 12.4979 18.8306H12.3713C12.2193 18.8306 12.0842 18.7799 11.966 18.6786C11.8647 18.5604 11.8141 18.4253 11.8141 18.2734Z" fill="white"/>
+                            </svg>   
+                            <span>
+                                кому подходит
+                            </span>                             
+                        </div>
+                        <div class="product-mob-tab-content" style="display:none">
+                            Мы предлагаем широкий спектр эффективных средств по уходу за кожей лица, телом, волосами, а также качественную декоративную косметику, созданную в Южной Корее.
+                            <br><br>
+                            Благодаря большому выбору средств, натуральным составам, оригинальным продуктам, неповторимому дизайну и доступным ценам корейская косметика быстро завоевала популярность во всем мире.
+                            <br><br>
+                            Корейская косметика широко известна в beauty (бьюти) сфере, активно используется в профессиональной косметологии и даже считается элитной.
+                            <br><br>
+                            Огромный выбор линеек продуктов позволяет комплексно решать конкретные задачи: увлажнение, осветление, антивозрастной уход, заживление воспалений и пр. Все продукты гипоаллергенны и имеют сертификаты безопасности!
+                        </div>
+                    </div>
+                    <div class="product-mob-tab">
+                        <div class="product-mob-tab-title">
+                            <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12.4668" cy="12.7427" r="12.4668" fill="#353430" fill-opacity="0.62"/>
+                                <path d="M11.8141 18.2734V13.7394H7.35608C7.2041 13.7394 7.06901 13.6803 6.9508 13.5621C6.84949 13.4439 6.79883 13.3004 6.79883 13.1315C6.79883 12.9795 6.84949 12.8529 6.9508 12.7515C7.06901 12.6333 7.2041 12.5742 7.35608 12.5742H11.8141V8.09094C11.8141 7.93896 11.8647 7.81231 11.966 7.711C12.0842 7.59279 12.2193 7.53369 12.3713 7.53369H12.4979C12.6499 7.53369 12.7766 7.59279 12.8779 7.711C12.9961 7.81231 13.0552 7.93896 13.0552 8.09094V12.5742H17.5385C17.6905 12.5742 17.8171 12.6333 17.9184 12.7515C18.0366 12.8698 18.0957 13.0133 18.0957 13.1821C18.0957 13.3341 18.0366 13.4692 17.9184 13.5874C17.8171 13.6887 17.6905 13.7394 17.5385 13.7394H13.0552V18.2734C13.0552 18.4253 12.9961 18.5604 12.8779 18.6786C12.7766 18.7799 12.6499 18.8306 12.4979 18.8306H12.3713C12.2193 18.8306 12.0842 18.7799 11.966 18.6786C11.8647 18.5604 11.8141 18.4253 11.8141 18.2734Z" fill="white"/>
+                            </svg>   
+                            <span>
+                                как использовать
+                            </span>                             
+                        </div>
+                        <div class="product-mob-tab-content" style="display:none">
+                            Мы предлагаем широкий спектр эффективных средств по уходу за кожей лица, телом, волосами, а также качественную декоративную косметику, созданную в Южной Корее.
+                            <br><br>
+                            Благодаря большому выбору средств, натуральным составам, оригинальным продуктам, неповторимому дизайну и доступным ценам корейская косметика быстро завоевала популярность во всем мире.
+                            <br><br>
+                            Корейская косметика широко известна в beauty (бьюти) сфере, активно используется в профессиональной косметологии и даже считается элитной.
+                            <br><br>
+                            Огромный выбор линеек продуктов позволяет комплексно решать конкретные задачи: увлажнение, осветление, антивозрастной уход, заживление воспалений и пр. Все продукты гипоаллергенны и имеют сертификаты безопасности!
+                        </div>
+                    </div>
+                    <div class="product-mob-tab">
+                        <div class="product-mob-tab-title">
+                            <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12.4668" cy="12.7427" r="12.4668" fill="#353430" fill-opacity="0.62"/>
+                                <path d="M11.8141 18.2734V13.7394H7.35608C7.2041 13.7394 7.06901 13.6803 6.9508 13.5621C6.84949 13.4439 6.79883 13.3004 6.79883 13.1315C6.79883 12.9795 6.84949 12.8529 6.9508 12.7515C7.06901 12.6333 7.2041 12.5742 7.35608 12.5742H11.8141V8.09094C11.8141 7.93896 11.8647 7.81231 11.966 7.711C12.0842 7.59279 12.2193 7.53369 12.3713 7.53369H12.4979C12.6499 7.53369 12.7766 7.59279 12.8779 7.711C12.9961 7.81231 13.0552 7.93896 13.0552 8.09094V12.5742H17.5385C17.6905 12.5742 17.8171 12.6333 17.9184 12.7515C18.0366 12.8698 18.0957 13.0133 18.0957 13.1821C18.0957 13.3341 18.0366 13.4692 17.9184 13.5874C17.8171 13.6887 17.6905 13.7394 17.5385 13.7394H13.0552V18.2734C13.0552 18.4253 12.9961 18.5604 12.8779 18.6786C12.7766 18.7799 12.6499 18.8306 12.4979 18.8306H12.3713C12.2193 18.8306 12.0842 18.7799 11.966 18.6786C11.8647 18.5604 11.8141 18.4253 11.8141 18.2734Z" fill="white"/>
+                            </svg>   
+                            <span>
+                                отзывы  
+                            </span>                             
+                        </div>
+                        <div class="product-mob-tab-content" style="display:none">
+                            Мы предлагаем широкий спектр эффективных средств по уходу за кожей лица, телом, волосами, а также качественную декоративную косметику, созданную в Южной Корее.
+                            <br><br>
+                            Благодаря большому выбору средств, натуральным составам, оригинальным продуктам, неповторимому дизайну и доступным ценам корейская косметика быстро завоевала популярность во всем мире.
+                            <br><br>
+                            Корейская косметика широко известна в beauty (бьюти) сфере, активно используется в профессиональной косметологии и даже считается элитной.
+                            <br><br>
+                            Огромный выбор линеек продуктов позволяет комплексно решать конкретные задачи: увлажнение, осветление, антивозрастной уход, заживление воспалений и пр. Все продукты гипоаллергенны и имеют сертификаты безопасности!
+                        </div>
+                    </div>
+                    <div class="product-mob-tab">
+                        <div class="product-mob-tab-title">
+                            <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12.4668" cy="12.7427" r="12.4668" fill="#353430" fill-opacity="0.62"/>
+                                <path d="M11.8141 18.2734V13.7394H7.35608C7.2041 13.7394 7.06901 13.6803 6.9508 13.5621C6.84949 13.4439 6.79883 13.3004 6.79883 13.1315C6.79883 12.9795 6.84949 12.8529 6.9508 12.7515C7.06901 12.6333 7.2041 12.5742 7.35608 12.5742H11.8141V8.09094C11.8141 7.93896 11.8647 7.81231 11.966 7.711C12.0842 7.59279 12.2193 7.53369 12.3713 7.53369H12.4979C12.6499 7.53369 12.7766 7.59279 12.8779 7.711C12.9961 7.81231 13.0552 7.93896 13.0552 8.09094V12.5742H17.5385C17.6905 12.5742 17.8171 12.6333 17.9184 12.7515C18.0366 12.8698 18.0957 13.0133 18.0957 13.1821C18.0957 13.3341 18.0366 13.4692 17.9184 13.5874C17.8171 13.6887 17.6905 13.7394 17.5385 13.7394H13.0552V18.2734C13.0552 18.4253 12.9961 18.5604 12.8779 18.6786C12.7766 18.7799 12.6499 18.8306 12.4979 18.8306H12.3713C12.2193 18.8306 12.0842 18.7799 11.966 18.6786C11.8647 18.5604 11.8141 18.4253 11.8141 18.2734Z" fill="white"/>
+                            </svg>   
+                            <span>
+                                состав
+                            </span>                             
+                        </div>
+                        <div class="product-mob-tab-content" style="display:none">
+                            Мы предлагаем широкий спектр эффективных средств по уходу за кожей лица, телом, волосами, а также качественную декоративную косметику, созданную в Южной Корее.
+                            <br><br>
+                            Благодаря большому выбору средств, натуральным составам, оригинальным продуктам, неповторимому дизайну и доступным ценам корейская косметика быстро завоевала популярность во всем мире.
+                            <br><br>
+                            Корейская косметика широко известна в beauty (бьюти) сфере, активно используется в профессиональной косметологии и даже считается элитной.
+                            <br><br>
+                            Огромный выбор линеек продуктов позволяет комплексно решать конкретные задачи: увлажнение, осветление, антивозрастной уход, заживление воспалений и пр. Все продукты гипоаллергенны и имеют сертификаты безопасности!
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
