--- a/catalog.html
+++ b/catalog.html
@@ -1263,7 +1263,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1305,7 +1305,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1347,7 +1347,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1389,7 +1389,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1431,7 +1431,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1473,7 +1473,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1515,7 +1515,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1557,7 +1557,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1599,7 +1599,7 @@
                                     <div class="stock-block-product-button-cart">
                                         В корзину
                                     </div>
-                                    <div class="stock-block-product-vish active">
+                                    <div class="stock-block-product-vish">
                                         <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>    
@@ -1708,7 +1708,7 @@
                                 <div class="stock-block-product-button-cart">
                                     В корзину
                                 </div>
-                                <div class="stock-block-product-vish active">
+                                <div class="stock-block-product-vish">
                                     <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                     </svg>    
@@ -2015,7 +2015,7 @@
                                 <div class="stock-block-product-button-cart">
                                     В корзину
                                 </div>
-                                <div class="stock-block-product-vish active">
+                                <div class="stock-block-product-vish">
                                     <svg width="27" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M19.2658 1.02668C16.6658 0.726676 13.5658 3.02668 12.9658 4.42668C12.1658 3.12668 9.16579 0.726676 6.56579 1.02668C2.96579 1.42668 0.565788 4.62668 1.06579 8.22668C1.26579 9.52668 1.86579 10.6267 2.66579 11.7267C3.66579 13.0267 4.86579 14.1267 6.16579 15.2267C8.06579 16.7267 12.5658 20.3267 12.9658 20.6267C13.3658 20.3267 17.8658 16.7267 19.7658 15.2267C21.0658 14.2267 22.2658 13.0267 23.2658 11.7267C24.0658 10.7267 24.6658 9.52668 24.8658 8.22668C25.2658 4.62668 22.8658 1.42668 19.2658 1.02668Z" stroke="#353430" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                     </svg>    
